--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 @import "reset.css";
 @import "main.css";
+
+
+
+body{
+    background-color: azure;
+}
