--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 @import "reset.css";
-@import "main.css";
+@import "index.css";
+@import "join.css";
+@import "nav.css";
+@import "user.css";
+@import "group.css";
 
+*{
+    /* overflow: hidden; */
+}
 
+html{
+    height: 100%;
+    width: 100%;
+}
 
 body{
-    background-color: azure;
+    background-color: #ffffff;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
