--- a/public/css/index.css
+++ b/public/css/index.css
@@ -11,7 +11,7 @@
     position: relative;
     bottom:46%;
     z-index:2;
-    background-color: #ffffff;
+    background-color: #fefefe;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -19,7 +19,8 @@
     padding: 10px;
     width: 300px;
     height: 300px;
-    border: 1px solid rgba(0,0,0,0.4);
+    border: 1px solid rgba(0,0,0,0.3);
+    border-radius: 5px;
     margin-bottom: 50px;
 }
 
