--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,9 @@
 @import "nav.css";
 @import "user.css";
 @import "group.css";
+@import "upload.css";
+@import "photo.css";
+@import "invite.css";
 
 *{
     /* overflow: hidden; */
@@ -16,7 +19,7 @@ html{
 }
 
 body{
-    background-color: #ffffff;
+    background-color: #f5f5f5;
     width: 100%;
     height: 100%;
     display: flex;
